--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -4,9 +4,12 @@ ENV TZ Asia/Tokyo
 
 # install Library
 RUN apt-get update && \
-	apt-get install -y git unzip libzip-dev libicu-dev libonig-dev && \
+	apt-get install -y git unzip libzip-dev libicu-dev libonig-dev curl npm && \
 	docker-php-ext-install intl pdo_mysql zip bcmath
-	
+
+RUN curl -sL https://deb.nodesource.com/setup_18.x | bash -
+RUN apt-get install -y nodejs
+
 RUN pecl install xdebug && \
     docker-php-ext-enable xdebug		
 # config file COPY
